# forecast-sales

./: .gitignore  README.md  pyproject.toml
data/raw/: df_future.csv
notebooks/: 01_eda.ipynb  02_model.ipynb
notebooks/catboost_info/tmp/: cat_feature_index.56ca36e8-e26c6bea-e505c639-b59a575b.tmp  cat_feature_index.a5e3ff23-ac83e67f-fe707120-f9fc84b1.tmp  cat_feature_index.c41a84a-9fdf3cc1-d8702b22-a4e2e806.tmp  cat_feature_index.cf314b3c-9574d9ce-a5ebf84d-ce98f4.tmp  cat_feature_index.f49fee39-63f9d164-d3b1154f-eebaaaba.tmp
results/: df_future.csv
src/forecast_sales/: data_utils.py  features.py
